--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "prettier": "^2.3.1",
     "typescript": "^4.3.2"
   }
 }
