--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "12.0.3",
@@ -15,6 +16,8 @@
   "devDependencies": {
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "12.0.3",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4"
   }
