--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "13.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
-    "eslint": "<8.0.0",
-    "eslint-config-next": "12.0.3",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "@types/node": "18.11.10",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3"
   }
 }
