--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,10 +23,7 @@
           "source.fixAll.eslint": true
         },
         "files.insertFinalNewline": true,
-        "files.trimFinalNewlines": true,
-        // ↓は不要になったら外す
-        // https://github.com/prettier/prettier-vscode/issues/3020#issuecomment-1584068844
-        "prettier.prettierPath": "./node_modules/prettier"
+        "files.trimFinalNewlines": true
       }
     }
   },
