🔧 Fix "editor.codeActionsOnSave"

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
         "editor.tabSize": 2,
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
-          "source.fixAll.eslint": true
+          "source.fixAll.eslint": "always"
         },
         "files.insertFinalNewline": true,
         "files.trimFinalNewlines": true
